--- a/products.html
+++ b/products.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hem</title>
+    <link rel="stylesheet" href="./content/css/products.css">
     <link rel="stylesheet" href="./content/css/style.css">
     <link rel="icon" href="./content/icons/favicon.ico ">
-
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -23,22 +22,19 @@
             <li class="btn-nav"><a href="about-us.html">Om oss</a></li>
         </ul>
     </div>
-<section class="products">
-    <div class="products-container">
-        <h2>Våra bilar</h2>
-        <button class="btn show-modal">Lägg till bil</button>
 
-        <div class="product-list"></div>
+    <div class="modal-car-details hidden">
+        <button class="close-modal">&times;</button>
+        <div class="modal-container"></div>
     </div>
-</section>
+    <main>
+        <section class="gallery">
+        </section>
+    </main>
 
-
+    <div class="overlay hidden"></div>
+    <script src="./scripts/vehicles.js"></script>
+    <script src="./scripts/site.js"></script>
 </body>
-<footer>
-
-</footer>
 
 </html>
-
-<script src="./scripts/index.js"></script>
-<script src="./scripts/site.js"></script>
