--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
         <div class="modal-container"></div>
     </div>
     <main>
-        <section class="gallery">
+        <section class="gallery-container">
         </section>
     </main>
 
