btns in products and "kundvagn"

--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hem</title>
+    <title>Cars</title>
     <link rel="stylesheet" href="./content/css/products.css">
     <link rel="stylesheet" href="./content/css/style.css">
     <link rel="icon" href="./content/icons/favicon.ico ">
@@ -20,6 +20,8 @@
             <li class="btn-nav"><a href="index.html">Hem</a></li>
             <li class="btn-nav active"><a href="products.html">Våra bilar</a></li>
             <li class="btn-nav"><a href="about-us.html">Om oss</a></li>
+            <li class="btn-nav" style="float:right"><a href="shopping-cart.html">Kundvagn</a></li>
+
         </ul>
     </div>
 
@@ -35,6 +37,8 @@
     <div class="overlay hidden"></div>
     <script src="./scripts/vehicles.js"></script>
     <script src="./scripts/site.js"></script>
+    <script src="./script/shopping-cart.js"></script>
+
 </body>
 
 </html>
