--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hem</title>
+    <title>About-us</title>
     <link rel="stylesheet" href="./content/css/style.css">
     <link rel="stylesheet" href="./content/css/about-us.css">
 
@@ -22,6 +22,8 @@
             <li class="btn-nav"><a href="index.html">Hem</a></li>
             <li class="btn-nav"><a href="products.html">Våra bilar</a></li>
             <li class="btn-nav active"><a href="about-us.html">Om oss</a></li>
+            <li class="btn-nav" style="float:right"><a  href="shopping-cart.html">Kundvagn</a></li>
+
         </ul>
     </div>
 <h3>Om företaget</h3>
